deploy/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ff-trainingskarte
  namespace: feuerwehr
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ff-trainingskarte
  template:
    metadata:
      labels:
        app: ff-trainingskarte
    spec:
      containers:
        - name: app
          image: ghcr.io/slin86/ffw-trainingsmap:latest
          ports:
            - containerPort: 8080
              name: http
          readinessProbe:
            httpGet:
              path: /actuator/health/readiness
              port: 8080
            initialDelaySeconds: 15
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /actuator/health/liveness
              port: 8080
            initialDelaySeconds: 30
            periodSeconds: 15
