deploy/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ff-trainingskarte
  namespace: feuerwehr
spec:
  selector:
    app: ff-trainingskarte
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
  type: ClusterIP
