deploy/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ff-trainingskarte
  namespace: feuerwehr
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  rules:
    - host: feuerwehr.home.lan
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: ff-trainingskarte
                port:
                  number: 8080
