deploy/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: ff-trainingskarte^
  namespace: feuerwehr
spec:
  entryPoints:
    - public
  routes:
    - match: Host(`feuerwehr.slin.io`)
      kind: Rule
      services:
        - name: ff-trainingskarte
          port: 8080
  tls: {}
